# icarus-prototype

./: .gitignore  CMakeLists.txt  build_completions.sh  compdbs  compile_compands.json  crafting.txt  crafting_notes.txt  generate_db  icarus.run  logs.txt  notes  recipes.txt
src/: commandline.hpp  context-window.hpp  engine.cpp  engine.hpp  event-log.hpp  index.cpp  thinkable.hpp  tickable.hpp
src/core/: .structure.hpp.swp  CMakeLists.txt  activities.hpp  activity.cpp  activity.hpp  bay.cpp  bay.hpp  crafting.cpp  crafting.hpp  entity.cpp  entity.hpp  event-listener.hpp  generator.hpp  ingredient.cpp  ingredient.hpp  pool.hpp  powersource.cpp  powersource.hpp  resource-generator.cpp  resource-generator.hpp  resource-pool.cpp  resource-pool.hpp  structure.cpp  structure.hpp  timed-process.cpp  timed-process.hpp  transform.hpp
src/core/activities/: CMakeLists.txt  activity.cpp  activity.hpp  construction.cpp  construction.hpp  crafting.cpp  crafting.hpp  timed-activity.cpp  timed-activity.hpp
src/core/entities/: CMakeLists.txt  citizen.cpp  citizen.hpp  entity.cpp  entity.hpp
src/structures/: CMakeLists.txt  structure.cpp  structure.hpp
src/visuals/: CMakeLists.txt  commandline.cpp  commandline.hpp  context-window.hpp  event-log.cpp  event-log.hpp  game-window.hpp  statusbar.hpp  window-utilities.cpp  window-utilities.hpp
tests/: CMakeLists.txt  compile_compands.json  icarus_tests.run  index.cpp  testing.cpp  testing.hpp
tests/core/: craft-process.cpp  craft-process.hpp  crafting.cpp  crafting.hpp  generator.cpp  generator.hpp  powersource.cpp  powersource.hpp  resource-generator.cpp  resource-generator.hpp
